--- a/app/components/SignIn/index.module.css
+++ b/app/components/SignIn/index.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
-    width: 480px;
+    width: 70vw;
+    max-width: 48rem;
 }
 
 .SignIn__title {
