--- a/app/components/SignUp/index.module.css
+++ b/app/components/SignUp/index.module.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
-    width: 480px;
+    width: 70vw;
+    max-width: 48rem;
 }
